v1.7.1 2010-12-19  Rafal Mantiuk  <mantiuk@gmail.com>

        * Added: Documented color coding in the manual of vdpvis
	
	* Added: bash auto-detection in configure.ac
	
	* Fixed: pupil diameter formula (previous fix was wrong)
	
	* Fixed: vdp script recognizes BMP files and is run with bash instead of sh

	* Fixed: pupil diameter replaced with pupil radius in Merimont &
	Wandel's OTF (thanks to Kenichiro Masaoka)

v1.7 2008-08-21  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>

	* Fixed: spurious zeros in the fan filters (thanks to Kenichiro Masaoka)
	
	* Fixed: frequency misalignment bug (thanks to Kenichiro Masaoka)

	* Fixed: pupil diameter formula 
	
	* Added: support for multithreaded FFTW (though I could not observe any speed up)	
	
	* Added: --sumary option to vdpvis (dump percent summary to a text
	file)

	* Fixed: target and mask image order was wrong in some programs

	* Fixed: if OTF is used, NTF (neural) is used instead of CSF
		
v1.6 2006-06-13  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>

	* Fixed: previous version could return different results on
	differents runs because fftw library used different IFFT code,
	although the difference was minimal. To make VDP results
	deterministic, FFTW optimizations are switched to FFTW_ESTIMATE.	

v1.5 2006-02-21  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>
	
	* Added: ABS fix, which compares target and mask and zeros
	predictions if the pixels are almost identical

	
v1.4 2005-12-02  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>

	* Added: Remove Inf, Nan and nonpositive values from luminance
	channels before any processing

v1.3 2005-05-09  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>
	
	* Low dynamic range images are handled automatically by vdp script

	* Fixed to work with pfstools 1.2
	
	* Added switch --multiply-lum
	
	* Added more comments and copyright information

v1.2 2004-11-22  Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>
	
	* Added new OTFs: Marimont, Deeley (suggested)
	
	* Added option to the vdp script: -o <raw_vdp_output.pfs>