@@ -7,20 +7,25 @@ PKG_CHECK_MODULES(PFS, pfs >= 1.2,,
 AC_SUBST(PFS_CFLAGS)
 AC_SUBST(PFS_LIBS)
 
+AH_TEMPLATE([DEBUG],
+	    [Define as 1 when compiling in debug mode ])
+
 dnl
 dnl Internal Debug
 dnl
-CXXFLAGS="-O3"
 AC_ARG_ENABLE(debug,
-		AC_HELP_STRING([--enable-debug],
-				 [Enable debug symbols and asserts]),
+		AS_HELP_STRING([--enable-debug],[Enable debug symbols and asserts]),
 		 [if test "$enable_debug" = "yes" ; then
-		     CXXFLAGS="-g"
+                     temp_CXXFLAGS=`echo $CXXFLAGS | sed "s/-O./ /; s/-g//"`
+		     CXXFLAGS="-g $temp_CXXFLAGS"
 		     AC_DEFINE([DEBUG])
-		  fi],[
-                  enable_debug="no"
-                  AC_DEFINE(NDEBUG, 1, [Disable assertion checks])
+		  fi],
+                  [enable_debug="no"
+                     temp_CXXFLAGS=`echo $CXXFLAGS | sed "s/-O./ /; s/-g//"`
+   	             CXXFLAGS="-O3 $temp_CXXFLAGS"
+                     AC_DEFINE(NDEBUG, 1, [Disable assertion checks])
                   ])
+
         
 AC_PROG_CXX
 AC_PROG_CC
